package ThucHanh_Practice.CA2;

public interface OnClickListener {
    void onClick(Button button);
}
